# Yahtzee_sim

./: .gitignore  Cargo.toml  README.md  lookup_path.txt  scores_path.txt
bincode/: strats5.bincode  strats6.bincode
src/: bitfield_array_file.rs  main.rs  yahtzee.rs  yahtzee_free_strats.rs  yahtzee_guide.rs  yahtzee_simulation.rs  yahtzee_strats.rs
