[package]
name = "yahtzee_sim"
version = "0.1.0"
authors = ["MarcusTL12 <marcuspaafjellet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ""
serde = {version = "", features = ["derive"]}
bincode = ""
